--- a/L1ex4/L1ex4.vcxproj
+++ b/L1ex4/L1ex4.vcxproj
@@ -148,6 +148,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="L1ex4.cpp" />
+    <ClCompile Include="L1main.cpp" />
+    <ClCompile Include="L1ex4Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="L1ex4.h" />
+    <ClInclude Include="L1ex4Main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
