Am adugat partea mea (n-am modificat nimic la Maria)

--- a/L1ex4/L1ex4.vcxproj
+++ b/L1ex4/L1ex4.vcxproj
@@ -147,11 +147,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="L1ex3.cpp" />
+    <ClCompile Include="L1ex3Main.cpp" />
     <ClCompile Include="L1ex4.cpp" />
     <ClCompile Include="L1main.cpp" />
     <ClCompile Include="L1ex4Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="L1ex3.h" />
+    <ClInclude Include="L1ex3Main.h" />
     <ClInclude Include="L1ex4.h" />
     <ClInclude Include="L1ex4Main.h" />
   </ItemGroup>
