--- a/L1ex4/L1ex4.vcxproj
+++ b/L1ex4/L1ex4.vcxproj
@@ -160,6 +160,9 @@
     <ClInclude Include="..\..\..\..\source\repos\Lab1_ex1_oop\Lab1_ex1_oop_functii.h" />
     <ClInclude Include="..\..\..\..\source\repos\Lab1_ex1_oop\Lab1_ex1_oop_main.h" />
     <ClInclude Include="..\..\..\..\source\repos\Lab1_ex1_oop\Lab1_ex1_oop_teste.h" />
+    <ClInclude Include="L1ex1.h" />
+    <ClInclude Include="L1ex1Main.h" />
+    <ClInclude Include="L1ex1test.h" />
     <ClInclude Include="L1ex3.h" />
     <ClInclude Include="L1ex3Main.h" />
     <ClInclude Include="L1ex4.h" />
